--- a/manon/nota-bene-variables.scss
+++ b/manon/nota-bene-variables.scss
@@ -6,4 +6,5 @@
   --nota-bene-font-size: 0.8rem;
   --nota-bene-font-weight: var(--application-base-font-weight);
   --nota-bene-text-color: #5d5d5d;
+  --nota-bene-background-color: transparent;
 }
